feat: hide AV for now, sub Twitter for LI, pad mobile title

--- a/_src/index.liquid
+++ b/_src/index.liquid
@@ -21,11 +21,11 @@ layout: layout.njk
 <p class='contact'>
 	You can find me on
 	<a href='mailto:me@zjr.io?subject=I%20found%20you.'>email</a>,
-	<a href='https://github.com/zjr'>GitHub</a>, and, uh…
-	<a href='https://twitter.com/zjrollyson'>Twitter</a>, I guess.
+	<a href='https://github.com/zjr'>GitHub</a>, and
+	<a href='https://www.linkedin.com/in/zjrollyson/'>LinkedIn</a>.
 </p>
-<p class='contact'>
-	You might also have an interest in the work of my wife—author, illustrator and
-	engineer
-	<a href='https://amandavacharat.com'>Amanda Vacharat</a>.
-</p>
+{% comment %}<p class='contact'>{% endcomment %}
+{% comment %}You might also have an interest in the work of my wife—author, illustrator and{% endcomment %}
+{% comment %}engineer{% endcomment %}
+{% comment %}<a href='https://amandavacharat.com'>Amanda Vacharat</a>.{% endcomment %}
+{% comment %}</p>{% endcomment %}
