--- a/_src/index.liquid
+++ b/_src/index.liquid
@@ -3,9 +3,9 @@ layout: layout.njk
 ---
 <h1 class='title-line'>
 	{% comment %}<span class='greeting'>Hello there,</span>{% endcomment %}
-	I'm Zachary Rollyson—<em href='https://github.com/zjr'>engineer</em>,
-	<em href='/' title="I'm not sure where to send this right now.">designer</em>,
-	and <a href='https://www.etsy.com/shop/InkAgainPens'>vintage pen restorer</a>.
+	I'm Zachary Rollyson—<a href='https://github.com/zjr'>engineer</a>,
+	<em>designer</em>, and
+	<a href='https://www.etsy.com/shop/InkAgainPens'>vintage pen restorer</a>.
 </h1>
 <p class='work-ode'>
 	<span>I never break prod.</span>
