feat: more restrictive fonts, add metas

--- a/_src/_includes/layout.njk
+++ b/_src/_includes/layout.njk
@@ -8,10 +8,20 @@ title: Zachary Rollyson — Engineer, Designer, Pen Restorer
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ title }}</title>
+		<meta name="description" content="A software engineer, designer, and fountain pen restorer who likes tabs or spaces, at any size.">
+		<meta property="og:title" content="engineer, designer, fountain pen restorer"/>
+		<meta property="og:url" content="https://zjr.io"/>
+		<meta property="og:description" content="A software engineer, designer, and fountain pen restorer who likes tabs or spaces, at any size."/>
+{#		<meta property="og:image" content=""/>#}
+		<meta property="og:type" content="website">
+		<meta name="twitter:site" content="@zjrollyson">
+		<meta property="og:site_name" content="Zachary Rollyson">
+		<meta name="twitter:card" content="summary_large_image"/>
+		<meta name="robots" content="index, follow, max-image-preview:large"/>
 		<link rel="stylesheet" href="/styles/global.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<main id="content">
