chore: add mastodon verification link

--- a/_src/_includes/layout.njk
+++ b/_src/_includes/layout.njk
@@ -18,6 +18,7 @@ title: Zachary Rollyson — Engineer, Designer, Pen Restorer
 		<meta property="og:site_name" content="Zachary Rollyson">
 		<meta name="twitter:card" content="summary_large_image"/>
 		<meta name="robots" content="index, follow, max-image-preview:large"/>
+		<link rel="me" href="https://hachyderm.io/@zrollyson"/>
 		<link rel="stylesheet" href="/styles/global.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
