feat: take out the heading links for now

--- a/_src/index.liquid
+++ b/_src/index.liquid
@@ -2,9 +2,8 @@
 layout: layout.njk
 ---
 <h1 class='title-line'>
-	I'm Zachary Rollyson—<a href='https://github.com/zjr'>engineer</a>,
-	<em>designer</em>, and
-	<a href='https://www.etsy.com/shop/InkAgainPens'>vintage pen restorer</a>.
+	I'm Zachary Rollyson—<em>engineer</em>, <em>designer</em>, and
+	<em>vintage pen restorer</em>.
 </h1>
 <p class='work-ode'>
 	<span>I never break prod.</span>
